--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,1 +1,157 @@
 @import "include/minimize.scss";
+@import "include/adaptive.scss";
+@import "include/components.scss";
+@import "include/states.scss";
+
+@font-face {
+    font-family: "CeraPro-Regular";
+    src: url("../fonts/CeraPro-Regular.woff2") format("woff2");
+    font-style: normal;
+}
+@font-face {
+    font-family: "CeraPro-Bold";
+    src: url("../fonts/CeraPro-Bold.woff2") format("woff2");
+    font-style: normal;
+}
+
+:root {
+    --green: #46a358;
+    --dark-gray: #3d3d3d;
+    --black: #000;
+    --black_alpha10:rgba(0,0,0,.1);
+    --green_alpha20: rgba(70, 163, 88, 0.2);
+    --white: #fff;
+}
+:root {
+    --main-color: var(--green);
+    --secondary-color: var(--white);
+    --green-border:var(--green_alpha20);
+    --black-border:var(--black_alpha10);
+}
+
+
+body {
+    font-family: "CeraPro-Regular";
+    overflow-x: hidden;
+}
+.header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-bottom: 0.1px solid var(--green_alpha20);
+    &__logo-wrapper {
+        display: flex;
+        align-items: center;
+        justify-content: left;
+        padding: 18px 0;
+    }
+    &__logo-link {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    &__logo-wrapper svg path {
+        fill: var(--main-color);
+    }
+    &__logo-img {
+        margin-right: 5px;
+    }
+    &__logo-title {}
+    &__nav {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+    &__nav-link {
+        display: inline-block;
+        text-transform: capitalize;
+        white-space: nowrap;
+        padding: 25px 5px;
+    }
+    &__nav-link:not(:last-child) {
+        margin-right: 50px;
+    }
+    &__button-group {
+        display: flex;
+        align-items: center;
+    }
+    &__button {
+        display: flex;
+    }
+    &__button-search {
+        margin-right: 30px;
+    }
+    &__button-purchase {
+        margin-right: 30px;
+        position: relative;
+    }
+    &__button-purchase-counter {
+        position: absolute;
+        font-size: 12px;
+        text-align: center;
+        top: 0;
+        left: 100%;
+        transform: translateX(-50%);
+        width: 16px;
+        height: 16px;
+        background-color: var(--main-color);
+        color: var(--secondary-color);
+        border-radius: 50%;
+        border: 1px solid var(--secondary-color);
+    }
+    &__button-login {
+        background: var(--main-color);
+        display: inline-flex;
+        padding: 8px 16px;
+        border-radius: 6px;
+    }
+    &__button-menu {
+        display: none;
+    }
+    &__button-login svg {
+        margin-right: 5px;
+    }
+    &__button-login span {
+        color: var(--secondary-color);
+    }
+}
+.container {
+    max-width: 1440px;
+    width: 90%;
+    margin: auto;
+}
+
+.link {}
+.button-group {}
+.svg-button {}
+.svg-icon {}
+
+
+.aside-menu{
+    display: block;
+    position: absolute;
+    top: 0;
+    right: 0;
+    transition: transform 0.3s ease-in;
+    width: 300px;
+    height: 100vh;
+    background: var(--secondary-color);
+    border-left: 1px solid var(--black_alpha10);
+    &__header{
+        padding: 17.5px 7px;
+        border-bottom: 1px solid var(--black_alpha10);
+    }
+    &__button-close{
+        display: flex;
+    }
+}
+.fade {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+    z-index: -10;
+    background: var(--black);
+    opacity: 0.4;
+}
